# xcloud

./: .gitignore  Project brief.md  package-lock.json  package.json  pnpm-lock.yaml
apps/desktop/: components.json  package-lock.json  package.json
apps/desktop/.cargo/: config.toml
apps/desktop/scripts/: prepare-sidecar.sh  release-macos.sh
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  engine.rs  lib.rs  pty.rs
apps/desktop/src-tauri/unicore-openclaw-extensions/unicore-workspace/: index.js  openclaw.plugin.json  package.json
apps/desktop/src/components/: AppLayout.tsx  CommandPalette.tsx  ConnectScreen.tsx  DevPreview.tsx  ModelSelector.tsx  OnboardingScreen.tsx  SettingsPanel.tsx  Titlebar.tsx  dotmatrix-loader.css
apps/desktop/src/data/: all-models.json  composio-apps.json
apps/desktop/src/hooks/: use-agents.ts  use-app-updater.ts  use-chat.ts  use-models.ts  use-sessions.ts  use-theme.ts  use-workspaces.ts
apps/desktop/src/lib/: ag-ui-bridge.ts  agent-package.ts  agent-ui-config.ts  agent-visuals.ts  avatar.ts  canvas-preferences.ts  default-avatar.ts  engine-storage.ts  engine.ts  openclaw-store.ts  (+2 more)
docs/: 01-OPENCLAW-OVERVIEW.md  02-GATEWAY-PROTOCOL.md  03-GATEWAY-SECURITY.md  04-GATEWAY-RUNBOOK.md  05-TOOLS-AND-SKILLS.md  06-CONFIGURATION.md  07-AUTHENTICATION.md  ENGINE_API.md
scripts/: poc-websocket.ts  prepare-remote-setup-assets.sh  setup-remote.sh
(+57 files in other folders)
